--- a/Outlets-And-Chairs/package.json
+++ b/Outlets-And-Chairs/package.json
@@ -26,6 +26,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-google-places": "^2.5.0",
     "react-native-maps": "^0.21.0",
-    "react-navigation": "^2.0.1"
+    "react-navigation": "^2.0.1",
+    "tcomb-form-native": "^0.6.11"
   }
 }
