--- a/Outlets-And-Chairs/package.json
+++ b/Outlets-And-Chairs/package.json
@@ -19,14 +19,18 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "express": "^4.16.3",
     "native-base": "^2.4.4",
+    "nodejs-mobile-react-native": "^0.1.4",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-google-places": "^2.5.0",
     "react-native-maps": "^0.21.0",
     "react-navigation": "^2.0.1",
-    "tcomb-form-native": "^0.6.11"
+    "tcomb-form-native": "^0.6.11",
+    "yelp-fusion": "^2.0.3"
   }
 }
