--- a/Outlets-And-Chairs/package.json
+++ b/Outlets-And-Chairs/package.json
@@ -25,9 +25,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
-    "react-native-google-places": "^2.5.0",
     "react-native-maps": "^0.21.0",
-    "react-navigation": "^2.0.4",
-    "tcomb-form-native": "^0.6.11"
+    "react-navigation": "^2.0.4"
   }
 }
