--- a/Outlets-And-Chairs/package.json
+++ b/Outlets-And-Chairs/package.json
@@ -26,6 +26,8 @@
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.21.0",
-    "react-navigation": "^2.0.4"
+    "react-native-uuid": "^1.4.9",
+    "react-navigation": "^2.0.4",
+    "uuid-js": "^0.7.5"
   }
 }
