--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
     "firebase": "^5.0.4",
     "native-base": "^2.4.4",
@@ -27,6 +28,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.21.0",
     "react-native-uuid": "^1.4.9",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4",
     "uuid-js": "^0.7.5"
   }
